samples/_failures_safe/1761285208_eafc6b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c6e26aa3.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_c6e26aa3.c:167:9: error: expected ‘:’ or ‘...’ at end of input
  167 |         case TOKEN_STRING
      |         ^~~~
./samples/SAFE/__tmp_c6e26aa3.c:167:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c6e26aa3.c:167:9: error: expected declaration or statement at end of input
